--- a/www/css/main.css
+++ b/www/css/main.css
@@ -50,6 +50,11 @@
     font-style: normal;
 }
 
+.ui-mobile, .ui-mobile body {height: 100%;}
+.ui-header, .ui-footer{border-width: 0;border-style: none}
+.ui-footer-fixed{bottom: 0; padding-bottom: 0px;}
+.ui-header-fixed{top: 0px;padding-top: 0px;}
+
 /* GENERAL */
 .left{float: left;}
 .right{float: right;}
@@ -178,10 +183,10 @@
 
 /* CONTENT DESCRIPCION */
 .ui-content .content_top{padding: 40px 0 0;overflow: hidden;margin: 0 auto;width: 240px;}
-.ui-content .content_top .imagen{width: 70px;}
-.ui-content .content_top .imagen img{width: 100%;display: block;}
+.ui-content .content_top .imagen{width: 60px;height: 60px;padding: 0 4px 8px 0;margin-right: 4px;}
+.ui-content .content_top .imagen img{width: 100%;height: 100%;display: block;border-radius: 2em;border: 2px solid #fff;box-shadow: 2px 1px 3px #000;-webkit-border-radius: 2em;}
 .ui-content .content_top .title{margin: 13px 4px;text-shadow: 0 0 0;width: 160px;}
-.ui-content .content_top .title h2{font-size: 26px;line-height: 28px;color: #fc039b;padding-top: 0;width: 100%;overflow: hidden;white-space: nowrap;font-family: NeuropoliticalRg-Regular;letter-spacing: -1px;text-overflow: ellipsis;}
+.ui-content .content_top .title h2{font-size: 22px;line-height: 28px;color: #fc039b;padding-top: 0;width: 100%;overflow: hidden;white-space: nowrap;font-family: NeuropoliticalRg-Regular;letter-spacing: -1px;text-overflow: ellipsis;}
 .ui-content .content_top .title a{color: #fff;font-size: 16px;padding-right: 35px;display: block;line-height: 18px;font-family: NeogreyRegular;}
 .ui-content .content_top .title a.up{background: url("../img/arrow_top.png") no-repeat scroll right bottom transparent;background-size: 30px;}
 .ui-content .content_top .title a.down{background: url("../img/arrow_bottom.png") no-repeat scroll right bottom transparent;background-size: 30px;}
@@ -197,7 +202,7 @@
 .ui-content .custom2 .content_bottom{padding: 0 100px;}
 .ui-content.slider .owl-theme .owl-controls{position: absolute;top: 0;width: 100%;}
 .ui-content.slider .owl-theme .owl-pagination {overflow: hidden;height: 20px;}
-.ui-content.slider .owl-theme .owl-controls .owl-page span{width: 8px;height: 10px;margin: 0px 2px;}
+.ui-content.slider .owl-theme .owl-controls .owl-page span{width: 8px;height: 8px;margin: 0px 2px;}
 
 /* SESIONES */
 #sesiones .ui-listview li h2{margin: 0;text-align: center;background: #fc049b;text-shadow: 0 0 0;font-size: 20px;line-height: 20px;padding: 4px 0;color: #fff;font-weight: normal;}
