--- a/www/css/main.css
+++ b/www/css/main.css
@@ -65,7 +65,7 @@
 .ui-page.custom .ui-page{background: transparent;}
 
 /* PAGE */
-/*.ui-page-theme-a .ui-btn.ui-btn-active, */.ui-page-theme-a .ui-btn:hover{background: url("../img/bg_button.png") repeat scroll 0 0 transparent;color: #fc027e;border: 1px solid #4f4f4f;}
+/*.ui-page-theme-a .ui-btn.ui-btn-active, */.ui-page-theme-a .content_options .ui-btn:hover{background: url("../img/bg_button.png") repeat scroll 0 0 transparent;color: #fc027e;border: 1px solid #4f4f4f;}
 .ui-page{font-family: NeogreyMedium;}
 .ui-page p.text{text-align: center;text-shadow: 0 0 0;color: #fff;font-weight: normal;font-size: 21px;letter-spacing: 1px;}
 .ui-page .ui-header{z-index: 10;}
@@ -75,7 +75,7 @@
 .ui-content .ui-listview{overflow: hidden;margin: 0 auto;}
 
 /* BUTTOM */
-.ui-btn.custom{background: url("../img/bg_button.png") repeat scroll 0 0 transparent;color: #fc027e;border-radius: 30px;line-height: 25px;text-shadow: 0px 1px 0px #616161 !important;font-family: NeogreyMedium;font-size: 25px;border: 1px solid #4f4f4f}
+.ui-btn.custom{background: url("../img/bg_button.png") repeat scroll 0 0 transparent;color: #fc027e !important;border-radius: 30px;line-height: 25px;text-shadow: 0px 1px 0px #616161 !important;font-family: NeogreyMedium;font-size: 25px;border: 1px solid #4f4f4f !important;}
 .ui-btn.custom:hover{color: #f723a5;text-shadow: -1px 2px 0px #616161;}
 .ui-btn-icon-left.castellano:after{background: url("../img/bg_castellano.png") no-repeat scroll 0 0 transparent;background-size: 55px;background-position: 50%;}
 .ui-btn-icon-left.ingles:after{background: url("../img/bg_ingles.png") no-repeat scroll 0 0 transparent;background-size: 55px;background-position: 50%;}
@@ -88,8 +88,8 @@
 /* MENU OPTION */
 .ui-controlgroup.custom{margin: 0;}
 .ui-controlgroup.custom .ui-controlgroup-controls{overflow: hidden;}
-.ui-controlgroup.custom .ui-controlgroup-controls a{font-family: NeogreyMedium;color: #ffffff;font-size: 15px;font-weight: normal;text-shadow: 0 0 0;}
-.ui-controlgroup.custom .ui-controlgroup-controls .ui-btn-icon-top{padding-top: 5.5em;padding-left: 0;padding-right: 0;padding-bottom:0;width: 93px;border: none;margin-top: -5px;background: url("../img/bg_item_menu.png") no-repeat scroll left bottom transparent;background-size: 110px;}
+.ui-controlgroup.custom .ui-controlgroup-controls a{font-family: NeogreyMedium;color: #ffffff;font-size: 14px;font-weight: normal;text-shadow: 0 0 0;}
+.ui-controlgroup.custom .ui-controlgroup-controls .ui-btn-icon-top{padding-top: 5.8em;padding-left: 0;padding-right: 0;padding-bottom:0;width: 93px;border: none;margin-top: -5px;background: url("../img/bg_item_menu.png") no-repeat scroll left bottom transparent;background-size: 110px;}
 .ui-controlgroup.custom .ui-controlgroup-controls .ui-btn-icon-top:after{left: 45%;margin-left: -30px;width: 70px;height: 70px;}
 .ui-controlgroup.custom .ui-controlgroup-controls .ui-btn-icon-top.icon_clubs:after{background: url("../img/bg_clubs.png") no-repeat scroll 0 0 transparent;background-size: 70px;background-position: 0;}
 .ui-controlgroup.custom .ui-controlgroup-controls .ui-btn-icon-top.icon_sesiones:after{background: url("../img/bg_sesiones.png") no-repeat scroll 0 0 transparent;background-size: 70px;background-position: 0;}
