--- a/www/css/jquery.mobile-1.4.2.css
+++ b/www/css/jquery.mobile-1.4.2.css
@@ -1328,7 +1328,7 @@ div.ui-mobile-viewport {
 .ui-mobile [data-role=page],
 .ui-mobile [data-role=dialog],
 .ui-page {
-	top: 0;
+	top: 1px;
 	left: 0;
 	width: 100%;
 	min-height: 100%;
