--- a/www/css/main.css
+++ b/www/css/main.css
@@ -252,6 +252,10 @@
 /* POPUP */
 .container_popup{margin: 20px;min-width: 410px;}
 
+/* VENTA TICKET */
+#venta_ticket .content_iframe { height: 100%;background-color: #000;}
+#venta_ticket .content_iframe iframe{height: 100% !important}
+
 /* PORTRAIT IPHONE 5 */
 
 @media only screen 
