--- a/www/css/main.css
+++ b/www/css/main.css
@@ -256,6 +256,11 @@
 #venta_ticket .content_iframe { height: 100%;background-color: #000;}
 #venta_ticket .content_iframe iframe{height: 100% !important}
 
+/* SCROLL */
+.endless_scroll_content{padding-top: 50px;}
+.endless_scroll_content .content_options.lista{padding-bottom: 50px;}
+.endless_scroll_loader { position: fixed; bottom: 0; left: 40%; }
+
 /* PORTRAIT IPHONE 5 */
 
 @media only screen 
