--- a/www/css/main.css
+++ b/www/css/main.css
@@ -194,7 +194,7 @@
 /* CONTENT DESCRIPCION */
 .ui-content .content_top{padding: 40px 0 0;overflow: hidden;margin: 0 auto;width: 240px;}
 .ui-content .content_top .imagen{width: 60px;height: 60px;padding: 0 4px 8px 0;margin-right: 4px;}
-.ui-content .content_top .imagen img{width: 100%;height: 100%;display: block;border-radius: 2em;border: 2px solid #fff !important;box-shadow: 2px 1px 3px #000;-webkit-border-radius: 2em;}
+.ui-content .content_top .imagen img{width: 100%;height: 100%;display: block;border-radius: 2em;box-shadow: 2px 1px 3px #000;-webkit-border-radius: 2em;border-left-color: #fff;border-top-color: #fff;border-right-color: #fff;border-bottom-color: #fff;border-top-width: 2px;border-bottom-width: 2px;border-left-width: 2px;border-right-width: 2px;border-style: solid;}
 .ui-content .content_top .title{margin: 13px 4px;text-shadow: 0 0 0;width: 160px;}
 .ui-content .content_top .title h2{font-size: 18px;line-height: 28px;color: #fc039b;padding-top: 0;width: 100%;overflow: hidden;white-space: nowrap;font-family: NeuropoliticalRg-Regular;letter-spacing: -1px;text-overflow: ellipsis;}
 .ui-content .content_top .title a{color: #fff;font-size: 16px;padding-right: 35px;display: block;line-height: 18px;font-family: NeogreyRegular;}
