--- a/www/css/main.css
+++ b/www/css/main.css
@@ -119,6 +119,7 @@
 .ui-header .page{text-align: center;width: 72%;margin-top: 0.5em;color: #fff;font-size: 20px;text-shadow: 0 0 0;}
 .ui-header .menu .page{margin-top: 0;width: 40%;font-size: 0px;}
 .ui-header .page img{width: 74px;}
+.ui-header .page h2.small{font-size: 20px;line-height: 38px;}
 .ui-header .setting{float:right}
 /*.ui-header .menu .setting a{margin-top: 25px;}*/
 .ui-header .setting .search{background: url("../img/bg_search.png") no-repeat scroll center top transparent; background-size:30px;}
@@ -261,6 +262,15 @@
 .endless_scroll_content{padding-top: 50px;}
 .endless_scroll_content .content_options.lista{padding-bottom: 50px;}
 .endless_scroll_loader { position: fixed; bottom: 0; left: 40%; }
+
+/* GUEST LIST */
+#guest_list .ui-listview li{margin: 1px 0;}
+#guest_list .ui-listview li a{padding-top: 4px;padding-bottom: 4px;padding-right: 10px;}
+#guest_list .ui-listview li a.ui-btn.custom{border-radius: 0;}
+#guest_list .ui-listview li span.info{float: left;width: 60%;line-height: 24px;}
+#guest_list .ui-listview li span.title{display: block;text-overflow: ellipsis;overflow: hidden;white-space: nowrap;font-size: 17px;text-align: left;font-family: NeuropoliticalRg-Regular;padding-right: 0px !important;padding-top: 8px;}
+#guest_list .ui-listview li span.fecha{display: block;font-size: 13px;font-family: HelveticaLTStdLight;color: #fff;line-height: 13px;padding-bottom: 9px;}
+#guest_list .ui-listview li button{float: right;width: 37%;padding: 5px 3px;font-size: 12px;letter-spacing: -1px;margin: 13px 0;background: #fc049b;text-shadow: 0 1px 0 #000;color: #fff;border-color: transparent;border-radius: 5px;}
 
 /* PORTRAIT IPHONE 5 */
 
